added authorizastion and schema validation middleware

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon --config ./nodemon.json ./bin/www"
   },
   "dependencies": {
+    "ajv": "^6.12.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
