updated postman requests with added authentication

--- a/guest-book-app.postman_collection.json
+++ b/guest-book-app.postman_collection.json
@@ -8,6 +8,21 @@
 		{
 			"name": "get all feedbacks",
 			"request": {
+				"auth": {
+					"type": "basic",
+					"basic": [
+						{
+							"key": "password",
+							"value": "Admin",
+							"type": "string"
+						},
+						{
+							"key": "username",
+							"value": "Admin",
+							"type": "string"
+						}
+					]
+				},
 				"method": "GET",
 				"header": [],
 				"url": {
