--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-standard": "4.0.1",
     "mocha": "6.2.0",
     "nyc": "14.1.1",
+    "sinon": "9.0.2",
     "sinon-chai": "3.3.0"
   }
 }
